Update user guide.